<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
>
    <Spinner
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="top"
            android:textSize="24sp"
            android:layout_marginStart="40dp"
            android:entries="@array/cities"/>

    <TextView
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="39dp"/>

    <LinearLayout
            android:id="@+id/tempInformationLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_below="@id/city"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp">
        <TextView
                android:id="@+id/currentTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:layout_gravity="center_horizontal"/>
        <TextView
                android:id="@+id/minMaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>

    <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/earth"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/currentTime"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/weather_icon"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailLabel"
            android:text="@string/detail_info"
            style="@style/TextViewEditFragmentStyle"
            android:layout_below="@id/tempInformationLayout"
            android:layout_marginTop="24dp"
            android:layout_marginStart="26dp"/>
    <GridLayout
            android:id="@+id/detailInformationLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailLabel"
            android:columnCount="2"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/wind"/>
        <TextView
                android:id="@+id/windValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/pressure"/>
        <TextView
                android:id="@+id/pressureValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/humidity"/>
        <TextView
                android:id="@+id/humidityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </GridLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forecastLabel"
            android:text="@string/forecast_3_days"
            style="@style/TextViewEditFragmentStyle"
            android:layout_below="@id/detailInformationLayout"
            android:layout_marginTop="24dp"
            android:layout_marginStart="26dp"/>

    <LinearLayout
            android:layout_below="@id/forecastLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
        <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1">
            <TextView
                    android:id="@+id/firstDayDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:textSize="14sp"
            />
            <ImageView
                    android:id="@+id/firstDayWeatherIcon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_gravity="center_horizontal|center_vertical"

                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"/>

            <TextView
                    android:id="@+id/firstDayMinMaxTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textSize="14sp"
            />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1">
            <TextView
                    android:id="@+id/secondDayDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:textSize="14sp"
            />
            <ImageView
                    android:id="@+id/secondDayWeatherIcon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"/>

            <TextView
                    android:id="@+id/secondDayMinMaxTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textSize="14sp"
            />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1">
            <TextView
                    android:id="@+id/thirdDayDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center_horizontal"
                    android:textSize="14sp"
            />
            <ImageView
                    android:id="@+id/thirdDayWeatherIcon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/ic_launcher_background"
                    android:layout_gravity="center_horizontal|center_vertical"

                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"/>

            <TextView
                    android:id="@+id/thirdDayMinMaxTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:textSize="14sp"
            />
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_update_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/update"
            app:backgroundTint="@color/colorPrimary" android:layout_marginTop="16dp" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"/>
</RelativeLayout>